<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/create_player" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/create_player" />
        <item android:id="@+id/new_match" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/new_match" />
        <item android:id="@+id/current_match" android:icon="@android:drawable/ic_lock_idle_alarm"
            android:title="@string/current_match" />
        <item android:id="@+id/positions" android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/positions" />
    </group>

    <item android:title="@string/options">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>