<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.mikepenz.iconics.view.IconicsImageView
        android:id="@+id/player_detail_imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:iiv_color="@color/black"
        app:iiv_icon="cmd-account-circle" />

    <LinearLayout
        android:layout_below="@id/player_detail_imageView"
        android:orientation="vertical"
        android:id="@+id/attacking_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="44dp"
                android:text="@string/spike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_alignParentRight="true"
                android:layout_marginRight="34dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/spike_bad"
                    android:layout_marginLeft="30dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:iiv_color="@color/black"
                    app:iiv_icon="cmd-emoticon-sad" />

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/spike_neutral"
                    android:layout_marginLeft="5dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:iiv_color="@color/black"
                    app:iiv_icon="cmd-emoticon-neutral" />

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/spike_good"
                    android:layout_marginLeft="5dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:iiv_color="@color/black"
                    app:iiv_icon="cmd-emoticon-happy" />

            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="44dp"
                android:text="@string/serve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_alignParentRight="true"
                android:layout_marginRight="34dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/serve_bad"
                    android:layout_marginLeft="30dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:iiv_color="@color/black"
                    app:iiv_icon="cmd-emoticon-sad" />

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/serve_neutral"
                    android:layout_marginLeft="5dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:iiv_color="@color/black"
                    app:iiv_icon="cmd-emoticon-neutral" />

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/serve_good"
                    android:layout_marginLeft="5dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:iiv_color="@color/black"
                    app:iiv_icon="cmd-emoticon-happy" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/attacking_holder"
        android:orientation="vertical"
        android:id="@+id/deffensive_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="44dp"
                android:text="@string/defense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_alignParentRight="true"
                android:layout_marginRight="34dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/defense_bad"
                    android:layout_marginLeft="30dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:iiv_color="@color/black"
                    app:iiv_icon="cmd-emoticon-sad" />

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/defense_neutral"
                    android:layout_marginLeft="5dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:iiv_color="@color/black"
                    app:iiv_icon="cmd-emoticon-neutral" />

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/defense_good"
                    android:layout_marginLeft="5dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:iiv_color="@color/black"
                    app:iiv_icon="cmd-emoticon-happy" />

            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="44dp"
                android:text="@string/block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_alignParentRight="true"
                android:layout_marginRight="34dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/block_bad"
                    android:layout_marginLeft="30dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:iiv_color="@color/black"
                    app:iiv_icon="cmd-emoticon-sad" />

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/block_neutral"
                    android:layout_marginLeft="5dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:iiv_color="@color/black"
                    app:iiv_icon="cmd-emoticon-neutral" />

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/block_good"
                    android:layout_marginLeft="5dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:iiv_color="@color/black"
                    app:iiv_icon="cmd-emoticon-happy" />

            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="44dp"
                android:text="@string/reception"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_alignParentRight="true"
                android:layout_marginRight="34dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/reception_bad"
                    android:layout_marginLeft="30dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:iiv_color="@color/black"
                    app:iiv_icon="cmd-emoticon-sad" />

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/reception_neutral"
                    android:layout_marginLeft="5dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:iiv_color="@color/black"
                    app:iiv_icon="cmd-emoticon-neutral" />

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/reception_good"
                    android:layout_marginLeft="5dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:iiv_color="@color/black"
                    app:iiv_icon="cmd-emoticon-happy" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="44dp"
                android:text="@string/setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_alignParentRight="true"
                android:layout_marginRight="34dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/setting_bad"
                    android:layout_marginLeft="30dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:iiv_color="@color/black"
                    app:iiv_icon="cmd-emoticon-sad" />

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/setting_neutral"
                    android:layout_marginLeft="5dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:iiv_color="@color/black"
                    app:iiv_icon="cmd-emoticon-neutral" />

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/setting_good"
                    android:layout_marginLeft="5dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:iiv_color="@color/black"
                    app:iiv_icon="cmd-emoticon-happy" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/deffensive_holder"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/foul"
            android:minEms="8"
            android:text="@string/fault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



</RelativeLayout>